# llm-bootcamp

./: README.md  index.html  styles.css
ch3-local-embedding/: .env.template  .gitignore  CHAPTER_NOTES.md  Makefile  README.md  pyproject.toml
ch3-local-embedding/agents/: embeddings.py  thread.py
ch3-local-embedding/agents/langgraph/: __init__.py  agent.py
ch3-local-embedding/agents/langgraph/tools/: __init__.py  doc_search.py  open_url.py  web_search.py
ch3-local-embedding/cli/: main.py
ch3-local-embedding/scripts/: web_ingest.py
ch3-local-embedding/tmp/: ch3_changes_summary.md  local_embedding_migration.md
